# solid2-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: sandbox.py
src/solid2_utils/: __init__.py  cache.py  mod.py  render.py
tests/: test_solid2_utils.py  test_solid2_utils_mod.py  test_solid2_utils_render.py
