[project]
name = "solid2-utils"
version = "0.1.0"
description = "Helper packages for solidpython2"
readme = "README.md"
authors = [
    { name = "Gerard Choinka", email = "gerard.choinka+github@gmail.com" }
]
homepage = "https://github.com/gchoinka/solid2-utils"
repository = "https://github.com/gchoinka/solid2-utils"

requires-python = ">=3.14"
dependencies = [
    "solidpython2>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
